# naashir

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/classes/: FileManager.py  InputHandler.py  Office365Client.py  PresentationBuilder.py  VideoGenerator.py  YouTubeHandler.py
src/config/: config.py  environment.py
src/lib/utils/: arabic_text_utils.py  text_utils.py  url_helpers.py  web_auth_automation.py
src/templates/short/: short.pptx
